# datasets

./: .gitignore  README.md  pyproject.toml
ADSB-X/: README.MD  assemble.ipynb  consolidate.py  minio_transfer.py  runtime.yaml  scraper.py
Brazil/: brazil.ipynb
ECMWF/: data_visualisation.ipynb  script.py
EuroControl/: AUAs.ipynb  FIRs_heatmap.ipynb  Flights.ipynb  README.md  flight_information_region.ipynb  flight_points.ipynb  route_discrepancy_study.ipynb  routes.ipynb
KiltHub/: kilthub.ipynb
OTS/: README.md  ots.ipynb
OpenSky/: get_data.py  preprocess_data.py
